Fixed #115 extend DockerfileOptions with jvm_flags and pin_digests